kubernetes/apps/base/drova/environments/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drova-app
  namespace: drova-staging
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "staging.drova.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws/chat
      backendRefs:
        - name: chat-service
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-gateway
          port: 8081
